Fix horizontal scrolling

--- a/src/styles/Setting.scss
+++ b/src/styles/Setting.scss
@@ -32,7 +32,6 @@ html {
 
 .leave {
   position: absolute;
-  width: 100vw;
   top: 2vh;
   left: 5vw;
 
